#149 fixed navigationbar (only show login if not logged in and adjusting small layout issues)

--- a/client/master_templates/css/navigation.css
+++ b/client/master_templates/css/navigation.css
@@ -262,7 +262,7 @@
 
 .dropdown-menu{
 	left: 80px !important;
-	top: -382px;
+	/*top: -382px;*/
 }
 
 .dropdown-menu .btn-primary{
